# teams-service-bell

./: .gitignore  .pylintrc  LICENSE  README.md  STYLEGUIDE.md  pyproject.toml  tox.ini
src/teamsservicebell/: __init__.py  __main__.py  runner.py  servicebell.py  utils.py
tests/: test_servicebell.py
